--- a/GolfClub/BlazorApp/Pages/Equipment/ViewAndManageEquipment.razor
+++ b/GolfClub/BlazorApp/Pages/Equipment/ViewAndManageEquipment.razor
@@ -37,7 +37,7 @@
     private int newAmount;
     private int oldAmount;
     private EquipmentBasicDto dto = null!;
-    private IEnumerable<Equipment> Equipments = new List<Equipment>();
+    private IEnumerable<Equipment?> Equipments = new List<Equipment?>();
     private IEnumerable<EquipmentBasicDto> equipmentBasicDtos = new List<EquipmentBasicDto>();
     protected override async Task OnInitializedAsync()
     {
