--- a/GolfClub/BlazorApp/Pages/Equipment/ManageEquipment.razor
+++ b/GolfClub/BlazorApp/Pages/Equipment/ManageEquipment.razor
@@ -123,7 +123,7 @@
 }
 @code {
     private ICollection<EquipmentBasicDto> equipmetsounts;
-    private ICollection<Equipment> equipments;
+    private ICollection<Equipment?> equipments;
     private ICollection<int> amounts;
     private int amount;
     private string name;
