Added C# Docs, Almost finished logic testing for User and Lesson

--- a/GolfClub/BlazorApp/Pages/Lesson/BookLesson.razor
+++ b/GolfClub/BlazorApp/Pages/Lesson/BookLesson.razor
@@ -9,6 +9,7 @@
 @using System.Security.Principal
 @inject IJavaSocketConnection socketService
 @inject ILessonService lessonService;
+@inject IUserService UserService;
 @inject IJSRuntime jsRuntime;
 @inject NavigationManager navMgr;
 
