--- a/GolfClub/BlazorApp/Pages/Equipment/RentEquipments.razor
+++ b/GolfClub/BlazorApp/Pages/Equipment/RentEquipments.razor
@@ -1,8 +1,6 @@
 @page "/RentEquipmentsForGame"
 @using global::Shared.Model
 @using HttpClients.ClientInterfaces
-@using global::Shared.Dtos.EquipmentDto
-@using global::Shared.Dtos.GameDto
 @inject IGameService GameService
 @inject IEquipmentService EquipmentService
 @inject NavigationManager NavMgr;
@@ -51,50 +49,44 @@
             <label class="game_card_label">Equipments:</label>
             @if (game.Equipments == null || !game.Equipments.Any())
             {
-                <button @onclick=@(() => GoRent(@game.Id)) class="rentEquipment">Go Rent Equipment</button>
 
                 <p>No Equipments in this Game.</p>
-                //add button to go to renting page here
+             
 
             }
-            //else if  (selectedGameId == game.Id && selectedGameEquipmentIds != null && selectedGameEquipmentIds.Any())
             else
             {
                 <p>@selectedUsername's Equipments:</p>
                 <table class="score_table">
                     <tr>
-                        <th>Equipments:</th>
-                        @foreach (var e in selectedGameEquipmentIds)
+                        <th>Rented equipmnet exist for this game</th>
+                        @foreach (var e in rentedEquipment)
                         {
                             {
-                                <th> <li>@e</li> </th>
+                                <li>@e!.Name</li> 
                             }
                         }
                     </tr>
                 </table>
-                <button @onclick=@(() => SeeRentedEquipment(@game.Id)) class="rentEquipment">Equipment</button>
+                
             }
 
         </a>
     </div>
 }
+
 @code {
+    private IEnumerable<Equipment?> rentedEquipment = new List<Equipment?>();
     private string error = "";
     private string selectedUsername = "";
-    //private Game game;
     private ICollection<Game> playerGames = new List<Game>();
-    List<int> selectedGameEquipmentIds = new List<int>();
-    private ICollection<Equipment>? Equipments;
-    private EquipmentBasicDto dto=null!;
-    private GameBasicDto gameDto = null!;
-    int selectedGameId=0;
-    
-    
+
+
+
     private async Task GetPlayerEquipment()
     {
         playerGames = new List<Game>();
         error = "";
-       // selectedGameId = gameId;
         if (selectedUsername.Equals(""))
         {
             error = "Insert username";
@@ -104,8 +96,13 @@
         try
         {
             playerGames = await GameService.GetAllGamesByUsernameAsync(selectedUsername);
-            //Equipments = gameDto.Equipments;
-           // selectedGameEquipmentIds= await EquipmentService.GetGameEquipmentIds(selectedGameId);
+            foreach (Game g in playerGames)
+            {
+                rentedEquipment = (await EquipmentService.GetEquipmentByGameIdAsync(g.Id))!;
+   
+            }
+           
+          
             
         }
         catch (Exception e)
@@ -116,22 +113,11 @@
         if (!error.Equals("No user found") && !playerGames.Any())
             error = "This player has no scores";
     }
-    private async Task GetGameEquipmentIds(int gameId)
-    {
-      selectedGameEquipmentIds = await EquipmentService.GetGameEquipmentIds(gameId);
-    }
-    
-    private void SeeRentedEquipment(int id)
-         {
-             NavMgr.NavigateTo($"/RentEquipment/{id}");
-         }
+  
     private void GoRent(int id)
-    {   //await GetGameEquipmentIds(selectedGameId);
+    {   
         NavMgr.NavigateTo($"/RentEquipment/{id}");
     }
 
-    private void ReturnEquipment()
-    {
-        
-    }
+   
 }
